--- a/src/css/fonts.scss
+++ b/src/css/fonts.scss
@@ -4,14 +4,14 @@
     src: url("../fonts/BebasNeue-Regular.woff"); 
 }
 
-// @font-face {
-//     font-family: "Poppins";
-//     font-weight: normal;
-//     src: url("../fonts/Poppins-Regular.woff2");
-// }
+@font-face {
+    font-family: "Montserat";
+    font-weight: normal;
+    src: url("../fonts/Montserrat-Regular.woff");
+}
 
-// @font-face {
-//     font-family: "Poppins";
-//     font-weight: bold;
-//     src: url("../fonts/Poppins-Bold.woff2");
-// }
+@font-face {
+    font-family: "Montserat";
+    font-weight: bold;
+    src: url("../fonts/Montserrat-Bold.woff");
+}
