--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -15,16 +15,87 @@
 	background: linear-gradient(147.52deg, #880002 6.2%, #350001 112.76%);
 	transform: skew(25deg);
 	margin-left: 520px;
+	position: relative;
+	img {
+		position: absolute;
+		transform: skew(-25deg);
+	}
+}
+
+.header__lines {
+	bottom: 0;
+	left: -400px;
+}
+
+.header__men {
+	opacity: 0;
+	visibility: hidden;
+	left: -420px;
+	bottom: -60px;
+	z-index: 10;
+}
+
+.header__men.active {
+	opacity: 1;
+	visibility: visible;
+}
+
+.header__boots {
+	opacity: 0;
+	visibility: hidden;
+	width: 530px;
+}
+
+.header__boots-black {
+	width: 460px;
+}
+
+.header__boots.active {
+	opacity: 1;
+	visibility: visible;
+}
+.boot1.header__boots-white {
+	top: 0;
+	left: -100px;
+}
+
+.boot2.header__boots-white {
+	bottom: -100px;
+	right: -180px;
+}
+
+.boot1.header__boots-black {
+	top: 0;
+	left: -50px;
+}
+
+.boot2.header__boots-black {
+	bottom: -60px;
+	right: -180px;
+}
+
+.header__sale {
+	font-family: "Bebas Neue";
+	font-weight: bold;
+	font-size: 96px;
+	line-height: 96px;
+	letter-spacing: 5px;
+	color: rgba(237, 0, 3, 0.2);
+	position: absolute;
+	right: -200px;
+	top: 350px;
+	transform: skew(-25deg);
 }
 
 .header__content {
-	width: 700px;
+	width: 750px;
 	height: auto;
 	position: relative;
 	display: flex;
 	flex-direction: column;	
 	justify-content: flex-start;
 	align-items: flex-end;
+	margin-left: -50px;
 }
 
 .logo__basic {
@@ -54,7 +125,7 @@
 }
 
 .header__info {
-	font-family: "Poppins";
+	font-family: "Montserat";
 	font-weight: 700;
 	font-size: 48px;
 	line-height: 72px;
@@ -64,7 +135,7 @@
 }
 
 .header__subinfo {
-	font-family: "Poppins";
+	font-family: "Montserat";
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 27px;
@@ -79,6 +150,8 @@
 	display: flex;
 	justify-content: flex-end;
 	margin-top: 50px;
+	margin-bottom: 30px;
+	margin-right: 50px;
 }
 
 .new__price {
@@ -132,14 +205,17 @@
 }
 
 .order {
-	width: 240px;
-	height: 50px;
-	background: linear-gradient(92.42deg, #FF8A00 0%, #ED0003 102.4%);
+	width: 500px;
+	display: flex; 
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .order__link {
-	width: 100%;
-	height: 100%;
+	width: 240px;
+	height: 50px;
+	background: linear-gradient(92.42deg, #FF8A00 0%, #ED0003 102.4%);
 	font-family: "Bebas Neue";
 	font-weight: bold;
 	font-size: 36px;
@@ -152,5 +228,49 @@
 	justify-content: center;
 	align-items: center;
 	text-transform: uppercase;
+	margin-bottom: 10px;
 }
 
+.time {
+	font-family: "Montserat";
+	font-weight: bold;
+	font-size: 10px;
+	line-height: 10px;
+	text-align: center;
+	letter-spacing: 2px;
+	color: $white;
+}
+
+.header__btns-group {
+	width: 450px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 40px;
+	margin-right: 50px; 
+}
+
+.header__btn {
+	background: none;
+	border: none;
+	width: 200px;
+	height: 140px;
+	transform: skew(30deg);
+	background:  linear-gradient(147.52deg, #880002 6.2%, #350001 112.76%);
+	transition: 0.3s ease;
+	cursor: pointer;
+	outline: none;
+	position: relative;
+}
+
+.header__btn.active {
+	box-shadow: 10px 10px 40px #ED0003;
+}
+
+.header__btn-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) skew(-30deg);
+	width: 100px;
+}
