--- a/src/css/sprey-section.scss
+++ b/src/css/sprey-section.scss
@@ -2,9 +2,9 @@
 	width: 100%;
 	height: 412px;
 	background: url("../img/sprey-bg.png") left center no-repeat;
-	border: 1px solid $black;
 	display: flex;
-	justify-content: center;	 
+	justify-content: center;
+	margin-bottom: 58px;	 
 }
 
 .sprey__card {
@@ -27,16 +27,115 @@
 }
 
 .sprey__title {
-	font-family: Bebas Neue;
-	font-style: normal;
+	font-family: "Bebas Neue";
 	font-weight: bold;
 	font-size: 24px;
 	line-height: 24px;
-	/* identical to box height */
-
 	letter-spacing: 2px;
-
-	color: #000000;
+	color: $black;
+	margin-bottom: 19px;
+}
+.sprey__text {
+	font-family: "Montserat";
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 21px;
+	color: $black;
+	margin-bottom: 16px;
 }
 
+.sprey__info {
+	font-family: "Montserat";
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 21px;
+	color: $black;
+}
+
+.sprey .price {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+
+.sprey .old__price {
+	font-family: "Montserrat";
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 17px;
+	color: $black;
+	letter-spacing: normal;
+	text-shadow: none;
+	border: none;
+	padding: 0;
+	margin: 0;
+	
+	span {
+		text-decoration: line-through;
+	}
+}
+
+.sprey .old__price:after,
+.sprey .old__price:before {
+	display: none;
+}
+
+.sprey .new__price {
+	width: 104px;
+	height: 35px;
+	background-color: $dark-red;
+	font-family: "Bebas Neue";
+	font-weight: bold;
+	font-size: 36px;
+	line-height: 35px;
+	color: $white;
+	text-transform: uppercase;
+	letter-spacing: normal;
+	display: flex;
+	justify-content: space-around;
+	text-shadow: none;
+}
+
+.sprey__card-right {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding: 40px 40px 40px 210px;
+}
+
+.sprey__card-img {
+	position: absolute;
+	left: 30px;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.sprey__card-form {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	.card__form-input {
+		margin-bottom: 15px;
+		width: 100%;
+	}
+	.order__link {
+		box-shadow: 15px 15px 40px rgba(136, 0, 2, 0.35);
+	}
+	.time {
+		font-family: "Montserat";
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 150%;
+		color: $black;
+		letter-spacing: normal;
+
+		span {
+			font-weight: bold;
+		}
+	}
+}
 
