--- a/src/css/third-section.scss
+++ b/src/css/third-section.scss
@@ -86,7 +86,6 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center; 
-	border: 1px solid $black;
 	margin-bottom: 104px;
 }
 
@@ -150,8 +149,29 @@
 }
 
 .slick-dots {
-	bottom: 0px;
+	bottom: 20px;
 }
+
+.slick-dots li {
+	width: 10px;
+	height: 10px;
+}
+
+.slick-dots li button {
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+	background-color: #C4C4C4;
+}
+
+.slick-dots li.slick-active button {
+	background-color: $dark-red;
+}
+
+.slick-dots li button:before{
+	display: none;
+}
+
 
 .slick-dotted.slick-slider {
 	margin: 0;
@@ -171,11 +191,12 @@
 }
 
 .review {
-	width: 996px;
+	min-width: 996px;
 	height: 293px;
-	// margin: 0 200px;
-	display: flex;
-	flex-direction: row;
+	margin: 0 200px;
+	// display: flex;
+	// flex-direction: row;
+	position: relative;
 }
 
 .review__left {
@@ -183,21 +204,88 @@
 	height: 293px;
 	background: $white;
 	box-shadow: -20px 20px 50px rgba(56, 0, 0, 0.25);
+	padding: 20px;
 	// margin-right: 40px;
+}
+
+.review__autor {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	// flex-direction: column;
+	margin-bottom: 10px;
+}
+
+.autor__info {
+	display: flex;
+	flex-direction: column;
+}
+
+.autor__foto {
+	width: 65px;
+	height: 65px;
+	border-radius: 100%;
+	position: relative;
+}
+
+.autor__foto-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 65px;
+	height: 65px;
+	border-radius: 100%;
+}
+
+.autor__name {
+	font-family: "Montserat";
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 24px;
+	text-align: left;
+	letter-spacing: 0.5px;
+	color: $black;
+	margin-left: 15px;
+	margin-bottom: 5px;
+	width: 100%;
+}
+
+.star__raiting {
+	list-style: none;
+	display: flex;
+	margin-left: 15px;
+}
+
+.review__text {
+	width: 100%;
+}
+
+.review__paragraf {
+	width: 100%;
+	font-family: "Montserat";
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 24px;
+	letter-spacing: 0.5px;
+	color: $black;
 }
 
 .review__foto {
 	width: 392px;
 	height: 293px;
-	position: relative;
+	position: absolute;
+	top: 0;
+	right: 0px;
 }
 
 .review__img {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	top: 0;
+	left: 0;
+	// transform: translate(-50%, -50%);
 	width: 392px;
 	height: 293px;
 }
+
 
