--- a/src/css/modal.scss
+++ b/src/css/modal.scss
@@ -13,11 +13,19 @@
 }
 
 .modal form {
+	opacity: 0;
+	visibility: hidden;
 	width: 100%;
 	height: 100%;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: flex-start;
+	transition: 0.3s ease;
+}
+
+.modal form.active {
+	opacity: 1;
+	visibility: visible;
 }
 
 .modal__autor {
@@ -74,6 +82,16 @@
 	margin-right: 15px;
 	border: 1px solid #888888;
 	position: relative;
+	img {
+		display: none;
+		width: 50px;
+		height: 50px;
+		border-radius: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 100;
+	}
 }
 
 .file div:before {
@@ -164,4 +182,32 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.send__window {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	visibility: hidden;
+}
+
+.send__window.active {
+	opacity: 1;
+	visibility: visible;
+}
+
+.send__massage {
+	width: 60%;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 130%;
+	text-align: center;
+	color: #222222;
 }
