--- a/src/css/third-section.scss
+++ b/src/css/third-section.scss
@@ -59,8 +59,8 @@
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: 320px;
-	height: 210px;
+	right: 0;
+	bottom: 0;
 	background-color: rgba(255, 255, 255, 0.3);
 	z-index: 50;
 	transition: 0.3s ease;
@@ -286,6 +286,10 @@
 	// transform: translate(-50%, -50%);
 	width: 392px;
 	height: 293px;
+}
+
+.move__mark {
+	display: none;
 }
 
 
